kubernetes/environments/dev/apps/n8n/ingress.yaml
---
# IngressRoute fuer n8n (DEV)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n-dev-v2.eneg.de`)
      kind: Rule
      services:
        - name: n8n
          namespace: n8n
          port: 5678
  tls:
    secretName: n8n-tls
